Styled print view. Fixed div structure of div view. Changed color of wrestler name and specialty move so that they would be visible on a white background.

--- a/app/assets/stylesheets/_show_wrestler.css
+++ b/app/assets/stylesheets/_show_wrestler.css
@@ -13,6 +13,19 @@
 }
 
 
+.gc-dc-show {
+  width: 5em;
+  padding-left: 1em;
+  color: #0366c6;
+}
+
+.move-show {
+  width: 12.5em;
+  padding-left: 0.5em;
+  color: #0366c6;
+}
+
+
 #site-plug {
   text-align: center;
   color: #3a963a;
@@ -55,23 +68,3 @@
 
 
 /* CSS for show wrestler (card) partial itself */
-
-
-
-
-/*Print Version of Wrestler Card*/
-.print_wrestler {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 2em;
-  display: grid;
-  grid-template-columns: 1fr 1fr 2fr;
-  max-width: 32em;
-  color: black;
-  background-color: white;
-}
-
-.print_wrestler p {
-  margin: 0px;
-  padding: 2px;
-}
