--- a/app/assets/stylesheets/wrestlers.css
+++ b/app/assets/stylesheets/wrestlers.css
@@ -50,6 +50,7 @@
   grid-column: 1 / 3;
   grid-row: 1;
   text-align: center;
+  color: #0366c6;
 }
 
 .wrestler-gc-header {
@@ -248,6 +249,7 @@
   grid-column: 1 / 3;
   grid-row: 17;
   text-align: center;
+  color: #0366c6;
 }
 
 .s1 {
@@ -546,18 +548,6 @@
   margin-right: 5px;
   color: #0366c6;
   font-weight: bold;
-}
-
-.gc-dc-show {
-  width: 5em;
-  padding-left: 1em;
-  color: #0366c6;
-}
-
-.move-show {
-  width: 11.5em;
-  padding-left: 0.5em;
-  color: #0366c6;
 }
 
 /*Index View*/
